products section completed

--- a/task-11-cyberphone/index.html
+++ b/task-11-cyberphone/index.html
@@ -64,7 +64,7 @@
       </nav>
     </header>
 
-    <section class="carousel px-lg-5">
+    <section class="carousel px-lg-5 px-md-3 px-2">
       <div class="container">
         <div class="row">
           <div
@@ -94,6 +94,196 @@
               src="./images/product-header2.png"
               alt="phone product"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="products px-lg-5 px-md-3 px-2 py-3 d-flex flex-column py-lg-5 justify-content-center align-items-center"
+    >
+      <h2 class="products--title mb-3">-Featured Products-</h2>
+      <div class="products--content container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card card-phone">
+              <img
+                src="./images/product1.png"
+                class="card-img-top"
+                alt="Cyber Beats"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h3>CyberBeats</h3>
+                    <p>Accessories</p>
+                  </div>
+                  <div>
+                    <h3>$99.99</h3>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="card-phone__rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div><button class="btnPhone-shadow">Buy Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card card-phone">
+              <img
+                src="./images/product2.png"
+                class="card-img-top"
+                alt="Cyber Phone"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h3>CyberPhone</h3>
+                    <p>Accessories</p>
+                  </div>
+                  <div>
+                    <h3>$99.99</h3>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="card-phone__rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div><button class="btnPhone-shadow">Buy Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card card-phone">
+              <img
+                src="./images/product3.png"
+                class="card-img-top"
+                alt="Cyber Tablet"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h3>CyberTablet</h3>
+                    <p>Accessories</p>
+                  </div>
+                  <div>
+                    <h3>$99.99</h3>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="card-phone__rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div><button class="btnPhone-shadow">Buy Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card card-phone">
+              <img
+                src="./images/product4.png"
+                class="card-img-top"
+                alt="Cyber Watch"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h3>CyberWatch</h3>
+                    <p>Accessories</p>
+                  </div>
+                  <div>
+                    <h3>$99.99</h3>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="card-phone__rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div><button class="btnPhone-shadow">Buy Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card card-phone">
+              <img
+                src="./images/product5.png"
+                class="card-img-top"
+                alt="Cyber Glasses"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h3>CyberGlasses</h3>
+                    <p>Accessories</p>
+                  </div>
+                  <div>
+                    <h3>$99.99</h3>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="card-phone__rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div><button class="btnPhone-shadow">Buy Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card card-phone">
+              <img
+                src="./images/product6.png"
+                class="card-img-top"
+                alt="Cyber Airpods"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h3>CyberAirpods</h3>
+                    <p>Accessories</p>
+                  </div>
+                  <div>
+                    <h3>$99.99</h3>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="card-phone__rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div><button class="btnPhone-shadow">Buy Now</button></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
