--- a/task-11-cyberphone/index.html
+++ b/task-11-cyberphone/index.html
@@ -289,6 +289,35 @@
       </div>
     </section>
 
+    <footer class="footerPhone">
+      <img
+        class="img-fluid footer__light"
+        src="./images/angle-up-light.svg"
+        alt=""
+      />
+
+      <div class="container px-lg-5 px-md-3 px-2">
+        <div class="row align-items-center">
+          <div class="col-4"><h3>&copy; 2021</h3></div>
+          <div class="col-8">
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
